# ObiOra-Panel

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  composer.json  package-lock.json  package.json  phpunit.xml  vite.config.js
ObiOra-Doctor/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  TODO.md  obiora-doctor.sh  obiora.sh  pyproject.toml
ObiOra-Doctor/config/: agent-panel.json.example  default.json  modules.json  plugin-catalog.json
ObiOra-Doctor/core/: __init__.py  agent.py  api.py  bench.py  cli.py  compare.py  config.py  engine.py  history.py  knowledge.py  launcher.py  logging_util.py  models.py  module.py  os_detect.py  panel_client.py  plugin_store.py  plugins.py  reboot_monitor.py  redact.py  reports.py  rescue.py  runner.py  schema.py  signing.py  terminal.py  tui.py  watch.py  web_secure.py
ObiOra-Doctor/docs/: ARCHITECTURE-SUITE.md  PANEL-INTEGRATION.md  REPORT.md  modules.md  plugin-sdk.md  reboot.md  report-format.md  security.md  virtualizor.md
ObiOra-Doctor/install/: install-agent.sh
ObiOra-Doctor/modules/: __init__.py  _helpers.py  accounts.py  apache.py  auth_logs.py  benchmark.py  cpanel.py  cpu.py  directadmin.py  disk.py  docker.py  docker_security.py  firewall.py  hosting_security.py  kernel.py  kvm.py  laravel.py  litespeed.py  lxc.py  lynis.py  mail_dns.py  malware.py  memcached.py  mysql.py  network.py  nginx.py  obiora.py  persistence.py  php.py  plesk.py  postgresql.py  privesc.py  raid.py  ram.py  reboot.py  redis.py  registry.py  security.py  smart.py  ssl.py  (+5 more)
(+929 files in other folders)
