[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crashhunter"
version = "2.0.0"
description = "CrashHunter Enterprise — Linux freeze diagnosis Black Box for OVH dedicated servers"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "ObiOra", email = "dev@obiora.io" }]
dependencies = [
    "reportlab>=4.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
crashhunter = "crashhunter.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["crashhunter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
